Fixed sidenav overflow style

--- a/website/src/components/Nav.module.css
+++ b/website/src/components/Nav.module.css
@@ -1,6 +1,6 @@
 .SideNav {
   display: inline-block;
-  width: 15rem;
+  width: 15.5rem;
   padding: 0 1rem 1rem;
   background-color: #e9eded;
   box-sizing: border-box;
@@ -31,6 +31,7 @@
   flex-direction: column;
   overflow: inherit;
   transition: none;
+  overflow: visible;
 }
 
 .SidebarNavContent > div {
